# swagger_server/models/rsi.py
@@ -1,0 +1,37 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.rsi_inner import RsiInner  # noqa: F401,E501
+from swagger_server import util
+
+
+class Rsi(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self):  # noqa: E501
+        """Rsi - a model defined in Swagger
+
+        """
+        self.swagger_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Rsi':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The rsi of this Rsi.  # noqa: E501
+        :rtype: Rsi
+        """
+        return util.deserialize_model(dikt, cls)
