# swagger_server/models/rsi_inner.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class RsiInner(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, timestamp: str=None, rsi: float=None):  # noqa: E501
+        """RsiInner - a model defined in Swagger
+
+        :param timestamp: The timestamp of this RsiInner.  # noqa: E501
+        :type timestamp: str
+        :param rsi: The rsi of this RsiInner.  # noqa: E501
+        :type rsi: float
+        """
+        self.swagger_types = {
+            'timestamp': str,
+            'rsi': float
+        }
+
+        self.attribute_map = {
+            'timestamp': 'timestamp',
+            'rsi': 'rsi'
+        }
+        self._timestamp = timestamp
+        self._rsi = rsi
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RsiInner':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The rsi_inner of this RsiInner.  # noqa: E501
+        :rtype: RsiInner
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def timestamp(self) -> str:
+        """Gets the timestamp of this RsiInner.
+
+
+        :return: The timestamp of this RsiInner.
+        :rtype: str
+        """
+        return self._timestamp
+
+    @timestamp.setter
+    def timestamp(self, timestamp: str):
+        """Sets the timestamp of this RsiInner.
+
+
+        :param timestamp: The timestamp of this RsiInner.
+        :type timestamp: str
+        """
+
+        self._timestamp = timestamp
+
+    @property
+    def rsi(self) -> float:
+        """Gets the rsi of this RsiInner.
+
+
+        :return: The rsi of this RsiInner.
+        :rtype: float
+        """
+        return self._rsi
+
+    @rsi.setter
+    def rsi(self, rsi: float):
+        """Sets the rsi of this RsiInner.
+
+
+        :param rsi: The rsi of this RsiInner.
+        :type rsi: float
+        """
+
+        self._rsi = rsi
