# swagger_server/models/stoch_inner.py
@@ -1,0 +1,114 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class StochInner(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, timestamp: str=None, stochk: float=None, stochd: float=None):  # noqa: E501
+        """StochInner - a model defined in Swagger
+
+        :param timestamp: The timestamp of this StochInner.  # noqa: E501
+        :type timestamp: str
+        :param stochk: The stochk of this StochInner.  # noqa: E501
+        :type stochk: float
+        :param stochd: The stochd of this StochInner.  # noqa: E501
+        :type stochd: float
+        """
+        self.swagger_types = {
+            'timestamp': str,
+            'stochk': float,
+            'stochd': float
+        }
+
+        self.attribute_map = {
+            'timestamp': 'timestamp',
+            'stochk': 'STOCHk',
+            'stochd': 'STOCHd'
+        }
+        self._timestamp = timestamp
+        self._stochk = stochk
+        self._stochd = stochd
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'StochInner':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The stoch_inner of this StochInner.  # noqa: E501
+        :rtype: StochInner
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def timestamp(self) -> str:
+        """Gets the timestamp of this StochInner.
+
+
+        :return: The timestamp of this StochInner.
+        :rtype: str
+        """
+        return self._timestamp
+
+    @timestamp.setter
+    def timestamp(self, timestamp: str):
+        """Sets the timestamp of this StochInner.
+
+
+        :param timestamp: The timestamp of this StochInner.
+        :type timestamp: str
+        """
+
+        self._timestamp = timestamp
+
+    @property
+    def stochk(self) -> float:
+        """Gets the stochk of this StochInner.
+
+
+        :return: The stochk of this StochInner.
+        :rtype: float
+        """
+        return self._stochk
+
+    @stochk.setter
+    def stochk(self, stochk: float):
+        """Sets the stochk of this StochInner.
+
+
+        :param stochk: The stochk of this StochInner.
+        :type stochk: float
+        """
+
+        self._stochk = stochk
+
+    @property
+    def stochd(self) -> float:
+        """Gets the stochd of this StochInner.
+
+
+        :return: The stochd of this StochInner.
+        :rtype: float
+        """
+        return self._stochd
+
+    @stochd.setter
+    def stochd(self, stochd: float):
+        """Sets the stochd of this StochInner.
+
+
+        :param stochd: The stochd of this StochInner.
+        :type stochd: float
+        """
+
+        self._stochd = stochd
